[package]
name = "bluefruitspi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Uses smaller delays than the original circuitpython library.
# This increases performance, but might reduce stability.
# It is unclear why delays in the original library are so big;
# they are much longer than specified in Adafruit's documentation.
tighter-delays = []

[dependencies]

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

log = "0.4.21"

cassette = "0.2.5"
snafu = { version = "0.8.1", default-features = false, features = [
    "rust_1_65",
] }
strum = { version = "0.26.1", default-features = false, features = ["derive"] }

[dev-dependencies]

rtic = { version = "2.1.0", features = ["thumbv7-backend"] }

cortex-m = "0.7.7"
teensy4-bsp = { version = "0.4.7", features = ["rt"] }
teensy4-panic = { version = "0.2.3", default-features = false }
teensy4-selfrebootor = "0.2.0"

usb-device = "0.2.9"

imxrt-uart-panic = "0.1.2"
imxrt-log = { version = "0.1.1", default-features = false, features = [
    "log",
    "lpuart",
] }

embedded-io = "0.6.1"
rtic-monotonics = { version = "2.0.0", features = ["imxrt_gpt1"] }

[patch.crates-io]
imxrt-hal = { git = "https://github.com/Finomnis/imxrt-hal", branch = "eh1-uart" }
rtic-monotonics = { git = "https://github.com/Finomnis/rtic", branch = "monotonic_rewrite" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
