[package]
name = "bluefruitspi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "teensy4"
required-features = ["imxrt"]

[features]
# Enables the i.MX RT SPI driver
imxrt = ["dep:imxrt-ral", "dep:imxrt-iomuxc"]

[dependencies]

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

log = "0.4.21"

cassette = "0.3.0"
snafu = { version = "0.8.1", default-features = false, features = [
    "rust_1_65",
] }
strum = { version = "0.26.1", default-features = false, features = ["derive"] }

imxrt-ral = { version = "0.5.3", optional = true }
imxrt-iomuxc = { version = "0.2.6", optional = true }


[dev-dependencies]

rtic = { version = "2.1.0", features = ["thumbv7-backend"] }

teensy4-bsp = { version = "0.4.7", features = ["rt"] }
teensy4-panic = { version = "0.2.3", default-features = false }
teensy4-selfrebootor = "0.2.0"

usb-device = "0.2.9"

imxrt-uart-panic = "0.1.2"
imxrt-log = { version = "0.1.1", default-features = false, features = [
    "log",
    "lpuart",
] }

embedded-io = "0.6.1"
rtic-monotonics = { version = "2.0.0", features = ["imxrt_gpt1"] }

[patch.crates-io]
imxrt-hal = { git = "https://github.com/imxrt-rs/imxrt-hal", rev = "b9a82455ffa967b5612ec5ecee52c2b11d45e6cc" }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", rev = "04b655d4faa7b93c8e3838bbad46efb72f5f4570" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --features "imxrt-iomuxc/imxrt1060,imxrt-ral/imxrt1062" --no-deps --open
all-features = true
features = ["imxrt-iomuxc/imxrt1060", "imxrt-ral/imxrt1062"]
rustdoc-args = ["--cfg", "docsrs"]
